--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -161,7 +161,7 @@ button{
 
     &_dark{
         height: 4.8rem;
-        width: 26vw;
+        width: 50.4rem;
         border-radius: 2.4rem;
     
         background: $medium3;
@@ -183,5 +183,9 @@ button{
 @media only screen and (max-width: 690px) {
     .btn_6{
         width: 75vw;
+
+        &_dark{
+            width: 75vw;
+        }
     }
 }
